[package]
name = "telemetry-parser"
version = "0.2.8"
authors = ["Adrian <adrian.eddy@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AdrianEddy/telemetry-parser"
description = "Library to parse real-time metadata embedded in video files or telemetry from other sources."
readme = "README.md"

[dependencies]
mp4parse = { version = "0.12", features = ["meta-xml", "unstable-api"] }
byteorder = "1.4"
pretty-hex = "0.3"
chrono = "0.4"
once_cell = "1.16"
paste = "1.0"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
argh = "0.1"
memchr = "2.5"
fc-blackbox = "0.2"
csv = "1.1"
human-sort = "0.2.2"
log = "0.4.17"

[build-dependencies]
#prost-build = "*"

quick-xml = { version = "0.26", optional = true }

[features]
sony-xml = ["quick-xml"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
# panic = 'abort'
