[package]
name = "telemetry-parser"
version = "0.3.0"
authors = ["Adrian <adrian.eddy@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AdrianEddy/telemetry-parser"
description = "Library to parse real-time metadata embedded in video files or telemetry from other sources."
readme = "README.md"

[dependencies]
mp4parse = { version = "0.17", features = ["meta-xml", "unstable-api"] }
byteorder = "1.5"
pretty-hex = "0.4"
chrono = "0.4"
paste = "1.0"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
argh = "0.1"
memchr = "2.7"
fc-blackbox = "0.2"
csv = "1.3"
human-sort = "0.2"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1.1"

[build-dependencies]
#prost-build = "*"

quick-xml = { version = "0.31", optional = true }

[features]
sony-xml = ["quick-xml"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
# panic = 'abort'
